# iacr-eprint-mcp-server

./: .gitignore  README.md  pyproject.toml  smithery.yaml
src/iacr_eprint_mcp_server/: __init__.py  __main__.py  config.py  models.py
src/iacr_eprint_mcp_server/tools/: __init__.py  details.py  download.py  search.py
src/iacr_mcp_server/: __init__.py  __main__.py  config.py  models.py  server.py
src/iacr_mcp_server/tools/: __init__.py  details.py  download.py  search.py
tests/: test_models.py
