[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iacr-eprint-mcp-server"
version = "0.1.0"
description = "MCP Server for IACR Cryptology ePrint Archive"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "doomdagadiggiedahdah", email = "" }
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.24.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2.8.0",
    "xmltodict>=0.13.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "anyio>=4.2.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=iacr_eprint_mcp_server"

[project.scripts]
iacr-eprint-mcp-server = "iacr_eprint_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iacr_eprint_mcp_server"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "COM", "PT"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"